[tool.poetry]
name = "be"
version = "0.1.0"
description = ""
authors = ["'Jon Psaila' <'jonathan_psaila@outlook.com'>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.0"
uvicorn = "^0.30.6"
anthropic = "^0.34.2"
pydantic = "^2.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
